Fix #136 - Contrast in drop-down list (tom select forms) for JustBlack palette

--- a/src/sass/palettes/justblack/_forms.scss
+++ b/src/sass/palettes/justblack/_forms.scss
@@ -2,3 +2,8 @@
 input[id$='-INDI-NAME'] {
     background-color: $jc-theme-medium-dark !important;
 }
+
+/** JustBlack Pallette - Forms - Tom-select */
+.ts-control, .ts-control input, .ts-dropdown {
+    color: $jc-theme-medium-dark;
+}
